SERVER-74330 Prevent nullptr access in checkCollectionOptions uassert